ENTRY_WRITABLE_PROBE_DEBUG.txt

$ python3 scripts/apply_entry_writable_probe_refactor.py
Entry writable probe refactor applied
exit_status=0

$ python3 scripts/report_entry_symbols.py --write ENTRY_SYMBOL_AUDIT.md
Entry symbol audit written: /home/runner/work/Toolhub-FloatBall/Toolhub-FloatBall/ENTRY_SYMBOL_AUDIT.md
exit_status=0

$ python3 scripts/report_entry_symbols.py --check ENTRY_SYMBOL_AUDIT.md
Entry symbol audit verification passed
exit_status=0

$ python3 scripts/verify_entry_redundancy_cleanup.py
Entry redundancy cleanup verification passed
exit_status=0

$ python3 scripts/verify_entry_writable_probe.py
  File "/home/runner/work/Toolhub-FloatBall/Toolhub-FloatBall/scripts/verify_entry_writable_probe.py", line 39
    assert_body_end = ENTRY.find('
                                 ^
SyntaxError: unterminated string literal (detected at line 39)
exit_status=1

final_status=1
